--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         color: green;
       }
     </style>
+    <script src="scripts/angular.min.js"></script>
   </head>
 <body>
   <div class="container">
