--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="row">
 
     <!-- To Buy List -->
-    <div class="col-md-6">
+    <div ng-controller="ToBuyController as toBuy" class="col-md-6">
      <h2>To Buy:</h2>
      <ul>
        <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
@@ -24,7 +24,7 @@
     </div>
 
     <!-- Already Bought List -->
-    <div class="col-md-6">
+    <div ng-controller="AlreadyBoughtController as alreadyBought" class="col-md-6">
      <h2>Already Bought:</h2>
      <ul>
        <li>Bought 10 cookies</li>
