--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/bootstrap.min.css">
     <link rel="stylesheet" href="styles/style.css">
     <script src="scripts/angular.min.js"></script>
+    <script src="scripts/app.js"></script>
   </head>
 <body ng-app="ShoppingListCheckOff">
   <div class="container">
@@ -16,10 +17,11 @@
     <!-- To Buy List -->
     <div ng-controller="ToBuyController as toBuy" class="col-md-6">
      <h2>To Buy:</h2>
-     <ul>
-       <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
-       <li>Buy 10 cookies <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button></li>
-     </ul>
+      <ul>
+        <li ng-repeat="item in toBuy.items">Buy {{item.quantity}} {{item.name}}
+          <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button>
+        </li>
+      </ul>
      <div class="emptyMessage">Everything is bought!</div>
     </div>
 
