--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div ng-controller="AlreadyBoughtController as alreadyBought" class="col-md-6">
      <h2>Already Bought:</h2>
      <ul>
-       <li>Bought 10 cookies</li>
+       <li ng-repeat="item in alreadyBought.items">Bought {{item.quantity}} {{item.name}}</li>
      </ul>
      <div class="emptyMessage">Nothing bought yet.</div>
     </div>
