Implement buttons functionality (buying items)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      <h2>To Buy:</h2>
       <ul>
         <li ng-repeat="item in toBuy.items">Buy {{item.quantity}} {{item.name}}
-          <button class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button>
+          <button ng-click="toBuy.buyItem(item);" class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button>
         </li>
       </ul>
      <div class="emptyMessage">Everything is bought!</div>
