--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           <button ng-click="toBuy.buyItem(item);" class="btn btn-default"><span class="glyphicon glyphicon-ok"></span> Bought</button>
         </li>
       </ul>
-     <div class="emptyMessage">Everything is bought!</div>
+     <div ng-if="toBuy.items.length == 0;" class="emptyMessage">Everything is bought!</div>
     </div>
 
     <!-- Already Bought List -->
@@ -31,7 +31,7 @@
      <ul>
        <li ng-repeat="item in alreadyBought.items">Bought {{item.quantity}} {{item.name}}</li>
      </ul>
-     <div class="emptyMessage">Nothing bought yet.</div>
+       <div ng-if="alreadyBought.items.length == 0;" class="emptyMessage">Nothing bought yet.</div>
     </div>
   </div>
 </div>
